kubernetes/apps/observability/alloy/app/httproute.yaml
# yaml-language-server: $schema=https://crd.cloudjur.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alloy
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Observability Service
    gethomepage.dev/name: Alloy
    gethomepage.dev/description: Observability aggregator and OpenTelemetry
      collector
    gethomepage.dev/icon: alloy.png
spec:
  hostnames: [alloy.cloudjur.com]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: alloy
          namespace: observability
          port: 12345
